--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Desmond's Portfolio</title>
+  <title>Desmond Kwame Nunoo</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- linking css file -->
@@ -49,7 +49,7 @@
             <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                 <h2 class="hero_title">Hi, I'm Desmond Kwame Nunoo</h2>
-                <p class="hero_desc">I am a Product Designer in Accra, Ghana</p>
+                <p class="hero_desc">I'm a Brand & Product Designer in Accra, Ghana</p>
             </div>
             </div>
         </div>
@@ -286,17 +286,29 @@
         </div>
     </section>
     <!-- footer section-->
-    <footer id="footer">
-        <div class="container-fluid">
-            <!-- social media icons -->
-            <div class="social-icons mt-4">
-                <a href="https://www.facebook.com/" target="https://www.facebook.com/desmondknunoo"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/" target="https://www.instagram.com/desmondknunoo"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.twitter.com/" target="https://www.twitter.com/desmondknunoo"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.linkedin.com/" target="https://www.linkedin.com/in/desmondknunoo"><i class="fab fa-linkedin"></i></a>
-            </div>
-        </div>
-    </footer>
+    <footer class="site-footer">  
+        <div class="container">  
+         <hr class="small">  
+        </div>  
+        <div class="container">  
+         <div class="row">  
+          <div class="col-md-8 col-sm-6 col-12">  
+           <p class="copyright-text">Copyright © 2022 All Rights Reserved.  
+        
+           </p>  
+          </div>  
+          <div class="col-md-4 col-sm-6 col-12">  
+           <ul class="social-icons">  
+            <li><a class="linkedin" href="https://linkedin.com/in/desmondknunoo" target=”_blank”><i class="fab fa-linkedin-in"></i></a></li>
+            <li><a class="behance" href="https://behance.net/desmondknunoo" target=”_blank”><i class="fab fa-behance"></i></a></li>
+            <li><a class="twitter" href="https://twitter.com/desmondknunoo" target=”_blank”><i class="fab fa-twitter"></i></a></li>
+            <li><a class="instagram" href="https://instagram.com/desmondknunoo" target=”_blank”><i class="fab fa-instagram"></i></a></li>
+            <li><a class="facebook" href="https://facebook.com/desmondknunoo" target=”_blank”><i class="fab fa-facebook-f"></i></a></li>     
+           </ul>  
+          </div>  
+         </div>  
+        </div>  
+       </footer>  
 
     <!-- load javascript after loading all html content -->
     <script src="script/script.js"></script>
