--- a/index.html
+++ b/index.html
@@ -140,19 +140,10 @@
             </div>
     </section> 
 
-
-
-    <!-- 
-        <div class="container mt-3">
-            <h1 class="text-center">Recent Works 👨🏾‍💻</h1>
-            <div class="row">
-                <div class="col-lg-4 mt-4"> -->
-
     <!-- services section-->
 
-
     <section id="services">
-        <div class="container services-text">
+        <div class="container services-text mt-3">
             <h1 class="text-center">Relevant Skills & Tools 🔧</h1>
             <div class="row">
                 <div class="col-lg-4 mt-4">
@@ -245,13 +236,13 @@
 
     <!-- portfolio section-->
     <section id="portfolio">
-        <div class="container mt-3">
+        <div class="portfolio-text container mt-3">
             <h1 class="text-center">Recent Works 👨🏾‍💻</h1>
             <div class="row">
                 <div class="col-lg-4 mt-4">
-                    <div class="card">
+                    <div class="card2">
                         <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
-                        <div class="card-body">
+                        <div class="card-body2">
                             <h4 class="card-title">YouTube Clone</h4>
                             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                             <div class="text-center">
@@ -262,9 +253,9 @@
                 </div>
 
                 <div class="col-lg-4 mt-4">
-                    <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
-                        <div class="card-body">
+                    <div class="card2">
+                        <img class="card-img-top" src="images/portfolioImage3.jpg" alt="Card image" style="width:100%">
+                        <div class="card-body2">
                             <h4 class="card-title">Quiz App</h4>
                             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                             <div class="text-center">
@@ -275,9 +266,9 @@
                 </div>
 
                 <div class="col-lg-4 mt-4">
-                    <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/portfolioImage3.jpg" alt="Card image" style="width:100%">
-                        <div class="card-body">
+                    <div class="card2">
+                        <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
+                        <div class="card-body2">
                             <h4 class="card-title">Product Landing Page</h4>
                             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                             <div class="text-center">
@@ -290,9 +281,9 @@
             <br>
             <div class="row">
                 <div class="col-lg-4 mt-4">
-                    <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
-                        <div class="card-body">
+                    <div class="card2">
+                        <img class="card-img-top" src="images/portfolioImage3.jpg" alt="Card image" style="width:100%">
+                        <div class="card-body2">
                             <h4 class="card-title">Messaging Service</h4>
                             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                             <div class="text-center">
@@ -303,9 +294,9 @@
                 </div>
 
                 <div class="col-lg-4 mt-4">
-                    <div class="card portfolioContent">
+                    <div class="card2">
                         <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
-                        <div class="card-body">
+                        <div class="card-body2">
                             <h4 class="card-title">Twitter Clone</h4>
                             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                             <div class="text-center">
@@ -316,9 +307,9 @@
                 </div>
 
                 <div class="col-lg-4 mt-4">
-                    <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
-                        <div class="card-body">
+                    <div class="card2">
+                        <img class="card-img-top" src="images/portfolioImage3.jpg" alt="Card image" style="width:100%">
+                        <div class="card-body2">
                             <h4 class="card-title">Blog App</h4>
                             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                             <div class="text-center">
@@ -333,7 +324,7 @@
     <!-- contact section-->
     <section id="contact">
         <div class="container mt-3 contactContent">
-            <h1 class="text-center">Let’s Talk</h1>
+            <h1 class="text-center">Let's Talk</h1>
 
             <div class="row mt-4">
                 
