--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </h4>
                     <p> </p>
                     <h4 style="font-size: 2rem; font-weight: 300"> 
-                        I'm also the Co-Founder of <strong style="font-weight: 500">Apex & Over Ltd.</strong> and the Community Manager of <strong style="font-weight: 500">africawork.space</strong>.
+                        I'm also the Co-Founder of <button class="apexandover"style="font-weight: 500" href="https://www.znap.link/apexandover" target=”_blank”>Apex & Over Ltd.</button> and the Community Manager of <button class="africawork_s"style="font-weight: 500" href="https://www.znap.link/africawork_s" target=”_blank”>africawork.space</button>.
                     </h4>
                     <p> </p>
                     <hr>
