--- a/index.html
+++ b/index.html
@@ -319,6 +319,95 @@
 
 
             </div>
+
+
+
+
+
+
+
+
+
+            <div class="row">
+
+
+                <div class="col-lg-4 mt-4">
+                    <div class="card2">
+                        <img class="card-img-top" src="images/nssGHImage.jpg" alt="Card image" style="width:100%">
+                        <div class="card-body2">
+                            <h4 class="card-title" style="font-weight: 700">NSS GH: Unofficial App</h4>
+                            <p class="card-text mt-3" style="font-weight: 300">
+                                Access all of the National Service Scheme of Ghana services on NSS GH: Unofficial. </p>
+
+                            <p style="font-weight: 300">👨🏾‍💻 - UI/UX Designer & Android Developer
+                                <br>🔧 - Adobe Creative Cloud, Kotlin, XML, Firebase
+                                <br>👥 - Daniel Partey
+                                <br>🗓 - January, 2020
+                            </p>
+                            <div class="text-left card-button">
+                                <a href="https://m.apkpure.com/nss-gh-unofficial/com.deemiensa.nssgh"
+                                    class="btn btn-light" target=”_blank”>APK Pure →</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 mt-4">
+                    <div class="card2">
+                        <img class="card-img-top" src="images/fudrinImage.jpg" alt="Card image" style="width:100%">
+                        <div class="card-body2">
+                            <h4 class="card-title" style="font-weight: 700">Fudrin App</h4>
+                            <p class="card-text mt-3" style="font-weight: 300">
+                                Fudrin helps you turn your cooking abilities into everyday earning activity.</p>
+
+                            <p style="font-weight: 300">👨🏾‍💻 - UI/UX Designer & Android Developer
+                                <br>🔧 - Adobe Creative Cloud, Java, XML, Firebase
+                                <br>👥 - Daniel Partey
+                                <br>🗓 - January, 2019
+                            </p>
+                            <div class="text-left card-button">
+                                <a href="https://play.google.com/store/apps/developer?id=Softwoahenfo"
+                                    class="btn btn-light" target=”_blank”>Google Play Store →</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="col-lg-4 mt-4">
+                    <div class="card2">
+                        <img class="card-img-top" src="images/u4norImage.jpg" alt="Card image" style="width:100%">
+                        <div class="card-body2">
+                            <h4 class="card-title" style="font-weight: 700">U4nor App</h4>
+                            <p class="card-text mt-3" style="font-weight: 300">Relevant and reliable campus news curated
+                                for tertiary students in Ghana.</p>
+                            <p style="font-weight: 300">👨🏾‍💻 - UI/UX Designer & Android Developer
+                                <br>🔧 - Java, XML, Firebase, Adobe Creative Cloud
+                                <br>🗓 - April, 2016
+                            </p>
+                            <div class="text-left col-md-4 col-sm-6 col-12">
+                                <ul class="card-button">
+                                    <li><a href="https://www.behance.net/gallery/91548529/U4nor-Android-App-UIUX"
+                                            class="btn btn-light" target=”_blank”>Behance →</a>
+                                    </li>
+                                    <li><a href="https://play.google.com/store/apps/details?id=com.u4nor.android"
+                                            class="btn btn-light" target=”_blank”>Google Play Store →</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
+
+<!--             
+
             <div class="row">
 
 
@@ -463,80 +552,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
-
-            <div class="row">
-
-
-                <div class="col-lg-4 mt-4">
-                    <div class="card2">
-                        <img class="card-img-top" src="images/nssGHImage.jpg" alt="Card image" style="width:100%">
-                        <div class="card-body2">
-                            <h4 class="card-title" style="font-weight: 700">NSS GH: Unofficial App</h4>
-                            <p class="card-text mt-3" style="font-weight: 300">
-                                Access all of the National Service Scheme of Ghana services on NSS GH: Unofficial. </p>
-
-                            <p style="font-weight: 300">👨🏾‍💻 - UI/UX Designer & Android Developer
-                                <br>🔧 - Adobe Creative Cloud, Kotlin, XML, Firebase
-                                <br>👥 - Daniel Partey
-                                <br>🗓 - January, 2020
-                            </p>
-                            <div class="text-left card-button">
-                                <a href="https://m.apkpure.com/nss-gh-unofficial/com.deemiensa.nssgh"
-                                    class="btn btn-light" target=”_blank”>APK Pure →</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 mt-4">
-                    <div class="card2">
-                        <img class="card-img-top" src="images/fudrinImage.jpg" alt="Card image" style="width:100%">
-                        <div class="card-body2">
-                            <h4 class="card-title" style="font-weight: 700">Fudrin App</h4>
-                            <p class="card-text mt-3" style="font-weight: 300">
-                                Fudrin helps you turn your cooking abilities into everyday earning activity.</p>
-
-                            <p style="font-weight: 300">👨🏾‍💻 - UI/UX Designer & Android Developer
-                                <br>🔧 - Adobe Creative Cloud, Java, XML, Firebase
-                                <br>👥 - Daniel Partey
-                                <br>🗓 - January, 2019
-                            </p>
-                            <div class="text-left card-button">
-                                <a href="https://play.google.com/store/apps/developer?id=Softwoahenfo"
-                                    class="btn btn-light" target=”_blank”>Google Play Store →</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-
-                <div class="col-lg-4 mt-4">
-                    <div class="card2">
-                        <img class="card-img-top" src="images/u4norImage.jpg" alt="Card image" style="width:100%">
-                        <div class="card-body2">
-                            <h4 class="card-title" style="font-weight: 700">U4nor App</h4>
-                            <p class="card-text mt-3" style="font-weight: 300">Relevant and reliable campus news curated
-                                for tertiary students in Ghana.</p>
-                            <p style="font-weight: 300">👨🏾‍💻 - UI/UX Designer & Android Developer
-                                <br>🔧 - Java, XML, Firebase, Adobe Creative Cloud
-                                <br>🗓 - April, 2016
-                            </p>
-                            <div class="text-left col-md-4 col-sm-6 col-12">
-                                <ul class="card-button">
-                                    <li><a href="https://www.behance.net/gallery/91548529/U4nor-Android-App-UIUX"
-                                            class="btn btn-light" target=”_blank”>Behance →</a>
-                                    </li>
-                                    <li><a href="https://play.google.com/store/apps/details?id=com.u4nor.android"
-                                            class="btn btn-light" target=”_blank”>Google Play Store →</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            </div> --> 
     </section>
 
     <!-- contact section-->
@@ -547,7 +563,7 @@
             <div class="row mt-4 text-center">
                
                 <h4 style="font-size: 2rem; font-weight: 300">
-                    Send me an email via <a class="apexandover" style="font-weight: 500"
+                    Send me an email here: <a class="apexandover" style="font-weight: 500"
                         href="mailto:desmondknunoo@gmail.com" target=”_blank”>desmondknunoo@gmail.com</a>
                 </h4>
             </div>
