--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
         <div class="container">
-            <div class="navbar-brand">
+            <!-- <div class="navbar-brand">
                 <a href="#">
                     <img alt="" src="images/icon-grey.png" width="35" height="35">
                 </a>
-            </div>
+            </div> -->
 
-            <a class="navbar-brand" href="#">Desmond Kwame Nunoo</a>
+            <a class="navbar-brand" href="#">Desmond</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -73,8 +73,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                    <h2 class="hero_title" style="font-weight: 600">Brand & Product Manager 😎</h2>
-                    <p class="hero_desc" style="font-weight: 300">👋🏾 Hi, I'm Desmond</p>
+                    <h2 class="hero_title" style="font-weight: 600">Brand & Product Manager</h2>
+                    <p class="hero_desc" style="font-weight: 300">👋🏾 Hi, I'm Desmond Kwame Nunoo</p>
                 </div>
             </div>
         </div>
@@ -263,8 +263,8 @@
                                 with actual prices at the physical pump.
                             </p>
                             <p style="font-weight: 300">👨🏾‍💻 - Brand & UI/UX Designer
-                                <br>🔧 - Figma, Adobe Creative Cloud
-                                <br>🗓 - July, 2022
+                                <!-- <br>🔧 - Figma, Adobe Creative Cloud
+                                <br>🗓 - July, 2022 -->
                                 <br><strong style="color: #ffffff00">.</strong>
                             </p>
 
@@ -285,8 +285,8 @@
                                 A community of African creatives that creates digital content.</p>
 
                             <p style="font-weight: 300">👨🏾‍💻 - Brand Designer & Web Developer
-                                <br>🔧 - Adobe Creative Cloud, WordPress
-                                <br>🗓 - February, 2022
+                                <!-- <br>🔧 - Adobe Creative Cloud, WordPress
+                                <br>🗓 - February, 2022 -->
                                 <br><strong style="color: #ffffff00">.</strong>
                             </p>
                             <div class="text-left card-button">
@@ -304,8 +304,8 @@
                             <p class="card-text mt-3" style="font-weight: 300">Designed for the Eastern Regional
                                 Coordinating Council, Ghana.</p>
                             <p style="font-weight: 300">👨🏾‍💻 - UI/UX Designer
-                                <br>🔧 - Figma
-                                <br>🗓 - January, 2022
+                                <!-- <br>🔧 - Figma
+                                <br>🗓 - January, 2022 -->
                                 <br><strong style="color: #ffffff00">.</strong>
 
                             </p>
@@ -340,9 +340,9 @@
                                 Access all of the National Service Scheme of Ghana services on NSS GH: Unofficial. </p>
 
                             <p style="font-weight: 300">👨🏾‍💻 - UI/UX Designer & Android Developer
-                                <br>🔧 - Adobe Creative Cloud, Kotlin, XML, Firebase
+                                <!-- <br>🔧 - Adobe Creative Cloud, Kotlin, XML, Firebase -->
                                 <br>👥 - Daniel Partey
-                                <br>🗓 - January, 2020
+                                <!-- <br>🗓 - January, 2020 -->
                             </p>
                             <div class="text-left card-button">
                                 <a href="https://m.apkpure.com/nss-gh-unofficial/com.deemiensa.nssgh"
@@ -361,9 +361,9 @@
                                 Fudrin helps you turn your cooking abilities into everyday earning activity.</p>
 
                             <p style="font-weight: 300">👨🏾‍💻 - UI/UX Designer & Android Developer
-                                <br>🔧 - Adobe Creative Cloud, Java, XML, Firebase
+                                <!-- <br>🔧 - Adobe Creative Cloud, Java, XML, Firebase -->
                                 <br>👥 - Daniel Partey
-                                <br>🗓 - January, 2019
+                                <!-- <br>🗓 - January, 2019 -->
                             </p>
                             <div class="text-left card-button">
                                 <a href="https://play.google.com/store/apps/developer?id=Softwoahenfo"
@@ -383,8 +383,8 @@
                             <p class="card-text mt-3" style="font-weight: 300">Relevant and reliable campus news curated
                                 for tertiary students in Ghana.</p>
                             <p style="font-weight: 300">👨🏾‍💻 - UI/UX Designer & Android Developer
-                                <br>🔧 - Java, XML, Firebase, Adobe Creative Cloud
-                                <br>🗓 - April, 2016
+                                <!-- <br>🔧 - Java, XML, Firebase, Adobe Creative Cloud
+                                <br>🗓 - April, 2016 -->
                             </p>
                             <div class="text-left col-md-4 col-sm-6 col-12">
                                 <ul class="card-button">
@@ -562,7 +562,7 @@
             
             <div class="row mt-4 text-center">
                
-                <h4 style="font-size: 2rem; font-weight: 300">
+                <h4 style="font-weight: 300">
                     Send me an email here: <a class="apexandover" style="font-weight: 500"
                         href="mailto:desmondknunoo@gmail.com" target=”_blank”>desmondknunoo@gmail.com</a>
                 </h4>
