--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                             <p class="card-text mt-3" style="font-weight: 300">
                                 Access all of the National Service Scheme of Ghana services on NSS GH: Unofficial. </p>
 
-                            <p style="font-weight: 300">👨🏾‍💻 - UI/UX Designer & Android Developer
+                            <p style="font-weight: 300">👨🏾‍💻 - UX Designer & Android Developer
                                 <!-- <br>🔧 - Adobe Creative Cloud, Kotlin, XML, Firebase -->
                                 <br>👥 - Daniel Partey
                                 <!-- <br>🗓 - January, 2020 -->
@@ -360,7 +360,7 @@
                             <p class="card-text mt-3" style="font-weight: 300">
                                 Fudrin helps you turn your cooking abilities into everyday earning activity.</p>
 
-                            <p style="font-weight: 300">👨🏾‍💻 - UI/UX Designer & Android Developer
+                            <p style="font-weight: 300">👨🏾‍💻 - UI Designer & Android Developer
                                 <!-- <br>🔧 - Adobe Creative Cloud, Java, XML, Firebase -->
                                 <br>👥 - Daniel Partey
                                 <!-- <br>🗓 - January, 2019 -->
@@ -382,7 +382,7 @@
                             <h4 class="card-title" style="font-weight: 700">U4nor App</h4>
                             <p class="card-text mt-3" style="font-weight: 300">Relevant and reliable campus news curated
                                 for tertiary students in Ghana.</p>
-                            <p style="font-weight: 300">👨🏾‍💻 - UI/UX Designer & Android Developer
+                            <p style="font-weight: 300">👨🏾‍💻 - UI Designer & Android Developer
                                 <!-- <br>🔧 - Java, XML, Firebase, Adobe Creative Cloud
                                 <br>🗓 - April, 2016 -->
                             </p>
