--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
                                 <li><a class="instagram" style="background-color: #121212"
                                         href="https://instagram.com/desmondknunoo" target=”_blank”><i
                                             class="fab fa-instagram"></i></a></li>
-                                <li><a class="facebook" style="background-color: #121212"
+                                <!-- <li><a class="facebook" style="background-color: #121212"
                                         href="https://facebook.com/desmondknunoo" target=”_blank”><i
-                                            class="fab fa-facebook-f"></i></a></li>
+                                            class="fab fa-facebook-f"></i></a></li> -->
                             </ul>
                             <p> </p>
                             <p> </p>
@@ -583,13 +583,16 @@
                     <ul class="social-icons">
                         <li><a class="linkedin" href="https://linkedin.com/in/desmondknunoo" target=”_blank”><i
                                     class="fab fa-linkedin-in"></i></a></li>
-                        <li><a class="behance" href="https://behance.net/desmondknunoo" target=”_blank”><i class="fab fa-behance"></i></a></li>
+                        <li><a class="behance" href="https://behance.net/desmondknunoo" target=”_blank”><i
+                                    class="fab fa-behance"></i></a></li>
                         <li><a class="twitter" href="https://twitter.com/desmondknunoo" target=”_blank”><i
                                     class="fab fa-twitter"></i></a></li>
-                        <li><a class="github" href="https://github.com/desmondknunoo" target=”_blank”><i
+                        <li><a class="github" href="https://github.com/desmondknunoo" target=”_blank”><i 
                                     class="fab fa-github"></i></a></li>
-                        <li><a class="instagram" href="https://instagram.com/desmondknunoo" target=”_blank”><i class="fab fa-instagram"></i></a></li>
-                        <li><a class="facebook" href="https://facebook.com/desmondknunoo" target=”_blank”><i class="fab fa-facebook-f"></i></a></li>     
+                        <li><a class="instagram" href="https://instagram.com/desmondknunoo" target=”_blank”><i
+                                    class="fab fa-instagram"></i></a></li>
+                        <!-- <li><a class="facebook" href="https://facebook.com/desmondknunoo" target=”_blank”><i 
+                            class="fab fa-facebook-f"></i></a></li>      -->
                     </ul>
                 </div>
             </div>
