--- a/index.html
+++ b/index.html
@@ -92,17 +92,17 @@
 
                 <div class="col-lg-8">
                     <br>
-                    <h4 style="font-size: 2rem; font-weight: 300"> I'm a brand & digital product designer who thrives in
+                    <p class="hero_desc" style="font-weight: 300"> I'm a brand & digital product designer who thrives in
                         bridging the gap
                         between product owners, software developers and their target users.
-                    </h4>
+                    <p4>
                     <p> </p>
-                    <h4 style="font-size: 2rem; font-weight: 300">
+                    <p class="hero_desc" style="font-weight: 300">
                         I'm also the Co-Founder of <a class="apexandover" style="font-weight: 500"
                             href="https://znap.link/apexandover" target=”_blank”>Apex & Over Ltd.</a> and the Community
                         Manager of <a class="africawork_s" style="font-weight: 500"
                             href="https://znap.link/africawork_s" target="_blank">africawork.space</a>.
-                    </h4>
+                    </p>
                     <p> </p>
                     <hr>
                     <p></p>
@@ -158,7 +158,7 @@
 
     <section id="services">
         <div class="container services-text mt-3">
-            <h1 class="text-center">Relevant Skills & Tools 🔧</h1>
+            <h1 class="text-center">Relevant Skills 🔧</h1>
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card servicesText">
@@ -253,6 +253,9 @@
     <section id="portfolio">
         <div class="portfolio-text container mt-3">
             <h1 class="text-center">Favourite Works 👨🏾‍💻</h1>
+            <hr>
+            <p class="hero_desc text-center" style="font-weight: 300"> Product Design & Software Development
+            </p>
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card2">
@@ -264,7 +267,7 @@
                             </p>
                             <p style="font-weight: 300">👨🏾‍💻 - Brand & UI/UX Designer
                                 <!-- <br>🔧 - Figma, Adobe Creative Cloud
-                                <br>🗓 - July, 2022 -->
+                                    <br>🗓 - July, 2022 -->
                                 <br><strong style="color: #ffffff00">.</strong>
                             </p>
 
@@ -319,13 +322,6 @@
 
 
             </div>
-
-
-
-
-
-
-
 
 
             <div class="row">
@@ -406,27 +402,24 @@
 
 
 
-<!--             
+            
 
             <div class="row">
 
 
                 <div class="col-lg-4 mt-4">
                     <div class="card2">
-                        <img class="card-img-top" src="images/nssGHImage.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="images/ranxbrandImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
-                            <h4 class="card-title" style="font-weight: 700">NSS GH: Unofficial App</h4>
+                            <h4 class="card-title" style="font-weight: 700">Ranxbrand</h4>
                             <p class="card-text mt-3" style="font-weight: 300">
-                                Access all of the National Service Scheme of Ghana services on NSS GH: Unofficial. </p>
+                                Procurement in China · Educational Consult in China · Graphic Design</p>
 
-                            <p style="font-weight: 300">👨🏾‍💻 - UI/UX Designer & Android Developer
-                                <br>🔧 - Adobe Creative Cloud, Kotlin, XML, Firebase
-                                <br>👥 - Daniel Partey
-                                <br>🗓 - January, 2020
+                            <p style="font-weight: 300">👨🏾‍💻 - Web Developer
                             </p>
                             <div class="text-left card-button">
-                                <a href="https://m.apkpure.com/nss-gh-unofficial/com.deemiensa.nssgh"
-                                    class="btn btn-light" target=”_blank”>APK Pure →</a>
+                                <a href="https://ranxbrand.com"
+                                 class="btn btn-light" target=”_blank”>Website →</a>
                             </div>
                         </div>
                     </div>
@@ -434,16 +427,16 @@
 
                 <div class="col-lg-4 mt-4">
                     <div class="card2">
-                        <img class="card-img-top" src="images/fudrinImage.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="images/sutImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
-                            <h4 class="card-title" style="font-weight: 700">Fudrin App</h4>
+                            <h4 class="card-title" style="font-weight: 700">Zero Schools Under Trees</h4>
                             <p class="card-text mt-3" style="font-weight: 300">
-                                Fudrin helps you turn your cooking abilities into everyday earning activity.</p>
+                                Real Estate Times Africa with Valco, GES, Ministries of Energy & Education, Ghana.</p>
 
-                            <p style="font-weight: 300">👨🏾‍💻 - UI/UX Designer & Android Developer
-                                <br>🔧 - Adobe Creative Cloud, Java, XML, Firebase
-                                <br>👥 - Daniel Partey
-                                <br>🗓 - January, 2019
+                            <p style="font-weight: 300">👨🏾‍💻 - Product Manager
+                                <br>👥 - Daniel Partey, Benjamin Ikeh,
+                                <br><strong style="color: #ffffff00">👥 -</strong>
+                                Charles Kwabena & Lennox Ayi-Bisahnox
                             </p>
                             <div class="text-left card-button">
                                 <a href="https://play.google.com/store/apps/developer?id=Softwoahenfo"
@@ -552,7 +545,13 @@
                         </div>
                     </div>
                 </div>
-            </div> --> 
+
+            </div>
+            <hr>
+            <p class="hero_desc text-center" style="font-weight: 300"> Brand & Graphic Design
+            </p>
+
+        </div>
     </section>
 
     <!-- contact section-->
