--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
 
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
+
+    <!-- Smartlook analytics -->
+    <script type='text/javascript'>
+        window.smartlook||(function(d) {
+          var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
+          var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
+          c.charset='utf-8';c.src='https://web-sdk.smartlook.com/recorder.js';h.appendChild(c);
+          })(document);
+          smartlook('init', 'ad56b54af391be51e6d4852f75b1b564b024f606', { region: 'eu' });
+      </script>
 </head>
 
 <body>
