--- a/index.html
+++ b/index.html
@@ -102,30 +102,34 @@
 
                 <div class="col-lg-8">
                     <br>
-                    <p style="font-weight: 300; font-size: 1.7rem"> I'm a brand & digital product designer who thrives in
+                    <h5 style="font-weight: 400"> I'm a brand & digital product designer who thrives in
                         bridging the gap between product owners, software developers and their target users.
-                    <p4>
-                    <p> </p>
-                    <p style="font-weight: 300; font-size: 1.7rem">
                         My over 5 years of experience cuts across the software, advertising, publishing and multimedia industries.
-                    </p>
+                    </h5>
                     <p> </p>
                     <hr>
                     <p></p>
                     <h5 style="font-weight: 400"> In product management, I have developed several mobile apps and webapps individually 
-                        and with teams, where I conducted UX research, on users, on competition, and on industry trends using a variety
-                        of research methods including interviews, surveys, and card sorting to help understand how products should be 
-                        designed, developed and marketed. I have also designed and audited UI screens in end-to-end testing and visual 
-                        quality assurance, identified experience gaps in digital products and iterate the product design process fill in the gaps
+                        and with teams, where I conducted UX research on users, on competition, and on industry trends for Apex & Over Ltd
+                        and other freelance clients. 
                     </h5>
                     <p> </p>
 
-                    <div class="row mt-3">
                         <h5 style="font-weight: 400">
-                            As a brand & graphic designer, I have designed artworks for social media marketing and promotion
-                            to communicate the business goals and drive sales of brands and their products. Also, I have designed
-                            the brand identities of personalities, startups and existing small scale companies to help them standout
-                            and confidently compete in their respective industries.
+                            As a brand & graphic designer, I have designed brand identities and artworks for social media marketing and promotion
+                            to communicate the business goals and drive sales of brands and their products while at EPP Books Services and Bluevyne Ltd.,
+                            and also, for freelance clients
+                        </h5>
+                        <p> </p>
+                        <hr>
+                        <h5 style="font-weight: 400">
+                            I have a first class degree in Publishing Studies (Design Major) from Kwame Nkrumah University of Science and Technology. 
+                        </h5>
+                        <p> </p>
+
+                        <h5 style="font-weight: 400">
+                            I have competed with my team to reach the quarter finals of MTN Apps Challenge 2018 & 
+                            Spring Board Road Show: Talent Expose Semifinalist 2019 where we presented various apps including U4nor.
                         </h5>
                         <p> </p>
 
@@ -154,7 +158,7 @@
                             <p> </p>
                             <p> </p>
                         </div>
-                    </div>
+                    
                 </div>
     </section>
 
