final change in first phase

--- a/index.html
+++ b/index.html
@@ -110,32 +110,28 @@
                     <p> </p>
                     <hr>
                     <p></p>
-                    <h5 style="font-weight: 400"> In product management, I have developed several mobile apps and
-                        webapps individually
-                        and with teams, where I conducted UX research on users, on competition, and on industry trends
-                        for Apex & Over Ltd
-                        and other freelance clients.
+                    <h5 style="font-weight: 400"> In product management, I have managed, designed and developed several software solutions
+                        individually and with teams, where I conducted UX research, designed user interfaces and programed 
+                        for Apex & Over Ltd. and other freelance clients.
                     </h5>
                     <p> </p>
 
                     <h5 style="font-weight: 400">
                         As a brand & graphic designer, I have designed brand identities and artworks for social media
-                        marketing and promotion
-                        to communicate the business goals and drive sales of brands and their products while at EPP
-                        Books Services and Bluevyne Ltd.,
-                        and also, for freelance clients.
+                        marketing and promotion to communicate the business goals and drive sales of brands and their products while at EPP
+                        Books Services and Bluevyne Ltd., and also, for freelance clients.
                     </h5>
                     <p> </p>
                     <hr>
                     <h5 style="font-weight: 400">
-                        I have a first class degree in Publishing Studies (Design Major) from Kwame Nkrumah University
+                        I have a first class BA. Publishing Studies (Design Major) degree from Kwame Nkrumah University
                         of Science and Technology.
                     </h5>
                     <p> </p>
 
                     <h5 style="font-weight: 400">
-                        I have competed with my team to reach the quarter finals of MTN Apps Challenge 2018 &
-                        Spring Board Road Show: Talent Expose Semifinalist 2019 where we presented various apps
+                        I competed with my team to reach the quarter-finals of MTN Apps Challenge 2018 &
+                        the semi-finals of Spring Board Road Show: Talent Expose 2019 where we presented various apps
                         including U4nor.
                     </h5>
                     <p> </p>
