--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
     <section id="services">
         <div class="container services-text mt-3">
-            <h1 class="text-center">Relevant Skills 🔧</h1>
+            <h1 class="text-center">Relevant skills 🔧</h1>
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card servicesText">
@@ -261,7 +261,7 @@
 
     <section id="portfolio">
         <div class="portfolio-text container mt-3">
-            <h1 class="text-center">Favourite Works 👨🏾‍💻</h1>
+            <h1 class="text-center">Favourite works 👨🏾‍💻</h1>
             <hr>
             <p class="hero_desc text-center" style="font-weight: 300"> Product Design & Software Development
             </p>
@@ -453,7 +453,12 @@
                                     <li><a href="https://play.google.com/store/apps/details?id=com.deemiensa.dictionary"
                                             class="btn btn-secondary" target=”_blank”>Google Play Store →</a>
                                     </li>
-                                </ul>
+
+                                    <li><a href="https://github.com/desmondknunoo/PublishingDictionary"
+                                        class="btn btn-secondary" target=”_blank”>GitHub →</a>
+                                </li>
+
+                                    
                             </div>
                         </div>
                     </div>
@@ -621,13 +626,13 @@
     <!-- contact section-->
     <section id="contact">
         <div class="container mt-3 contactContent">
-            <h1 class="text-center">Let's Work Together 😊</h1>
+            <h1 class="text-center">Let's work together 😊</h1>
 
             <div class="row mt-4 text-center">
 
                 <h4 style="font-weight: 300">
-                    Send me an email here: <a class="apexandover" style="font-weight: 500"
-                        href="mailto:desmondknunoo@gmail.com" target=”_blank”>desmondknunoo@gmail.com</a>
+                    Send me an email <a class="apexandover" style="font-weight: 500"
+                        href="mailto:desmondknunoo@gmail.com" target=”_blank”>here</a>.
                 </h4>
             </div>
         </div>
